# interesting_things_collection

./: .gitattributes  .gitignore  README.md  README_CN.md  build_msix.bat  pubspec.yaml
android/app/: build.gradle
assets/: emoji.txt
assets/i18n/: strings.i18n.json  strings_zh-CN.i18n.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  test_page.dart
lib/app/: app.dart  fast_search_region.dart  run_desktop_app.dart  run_mobile_app.dart  wrapper.dart
lib/bridge/: bridge_generated.dart  native.dart
lib/catalog/: catalog_notifier.dart  catalog_screen.dart
lib/common/: app_params.dart  base64_utils.dart  dev_tool.dart  hashcode_extension.dart  highlight_text.dart  local_storage.dart  logger.dart  sm_utils.dart
lib/components/: ban_painter.dart  extendable_listview.dart  fast_search_region.dart  pin_code_dialog.dart
lib/data_transfer/: data_transfer_model.dart  data_transfer_screen.dart  udp_server.dart
lib/fast_note/: fast_note_notifier.dart  fast_note_screen.dart  fast_note_state.dart
lib/isar/: catalog.dart  catalog.g.dart  catalog_item.dart  catalog_item.g.dart  (+11 more)
linux/: CMakeLists.txt  my_application.cc
native/: .gitignore  Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/dialog/: auto_close_dialog.rs  mod.rs
native/src/tests/: mod.rs
test/: hashcode_test.dart  ipv4_test.dart  isolate_test.dart  isolate_test_2.dart  split_test.dart  udp_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+75 files in other folders)
