[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.68"
flutter_rust_bridge = "= 1.82.3"
ipc-channel = "0.17.0"
lazy_static = "1.4.0"
serde = { version = "1.0.106", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
slint = "1.3.2"


[build-dependencies]
flutter_rust_bridge_codegen = "= 1.82.3"